--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,6 @@
 {
-  "presets": [
-    "env",
-    "react"
-  ],
+  "presets": ["env", "react"],
   "plugins": [
-    "transform-class-properties",
-    "transform-object-rest-spread"
+    "transform-class-properties"
   ]
 }
