--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
+    "extract-text-webpack-plugin": "3.0.0",
     "jest": "20.0.4",
     "live-server": "^1.2.1",
     "moment": "2.18.1",
@@ -41,7 +42,6 @@
     "react-test-renderer": "16.0.0",
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
-    "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
